2007-03-04  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* gtkrc-utils.c: (gtkrc_get_details):
	* gtkrc-utils.h:
	Move gtkrc-utils from theme-switcher to here.

	* gnome-theme-info.c: (gnome_theme_read_meta_theme): Search the gtkrc for
	the colour scheme if none was found in the metatheme file. Fixes a problem
	when comparing two metathemes which only differ by the colour scheme setting.

2007-02-28  Thomas Wood  <thos@gnome.org>

	* gnome-theme-apply.c: (gnome_meta_theme_set): Set the gtk-color-scheme even
	if it is blank.
	* theme-thumbnail.c: (create_image), (handle_bytes),
	(generate_theme_thumbnail), (generate_theme_thumbnail_async),
	(theme_thumbnail_factory_init): Set the gtk-color-scheme when creating the
	thumbnail.

2007-01-29  Kjartan Maraas  <kmaraas@gnome.org>

	* theme-thumbnail.c: Mark some stuff as static.

2007-01-19  Thomas Wood  <thos@gnome.org>

	* gnome-theme-apply.c: (gnome_meta_theme_set):
	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
	(gnome_theme_meta_info_new), (gnome_theme_meta_info_free),
	(gnome_theme_meta_info_print), (gnome_theme_meta_info_compare):
	* gnome-theme-info.h:

	Add support for saving and applying the gtk-color-scheme key

2007-01-14  Thomas Wood  <thos@gnome.org>

	* theme-thumbnail.c: (generate_theme_thumbnail): Remove
	g_return_if_fail_warning as this doesn't need to be a critical
	warning. Fixes bug 353620.

2007-01-11  Thomas Wood  <thos@gnome.org>

	* gnome-theme-info.c: (update_common_theme_dir_index): Applied patch
	from Priit Laes <amd@store20.com>. Fixes bug 349471 (Crash on manually
	changing the icon theme name).

2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>

	Fixes #336286

	* capplet-util.c (capplet_init): switched from popt to GOptionContext.

2007-01-05  Christian Persch <chpe@gnome.org>

	Fixes #393117

	* gnome-theme-info.c (read_icon_theme): fixed leak.

2006-12-08  Kjartan Maraas  <kmaraas@gnome.org>

	* file-transfer-dialog.c: (file_transfer_dialog_init):